--- a/report.Rmd
+++ b/report.Rmd
@@ -2,7 +2,7 @@
 title: "report"
 author: "Phoebe"
 date: "2025-11-18"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
